# chat

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  api.yml  async_api_docs.html  vcpkg.json
compose/: docker-compose.yml
config/: config.json
front/html/: base.html  chat,html  chat.html  chat.js  login.html  registration.html
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp
src/controller/: AuthController.hpp  StaticController.hpp  StaticFilesManager.cpp  StaticFilesManager.hpp
src/dto/: ConfigDto.hpp  DTOs.hpp  Messages.hpp  UserDto.hpp
src/migrations/: 001_init.sql
src/service/: ConnectionHandler.cpp  ConnectionHandler.hpp  Lobby.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp
src/service/auth/: AuthServiceBase.cpp  AuthServiceBase.hpp  AuthTokenService.cpp  AuthTokenService.hpp  RequestInterceptor.hpp  UserObject.hpp
src/service/chat/: Lobby.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp
src/service/dao/: ChatDao.cpp  ChatDao.hpp
src/service/dao/impl/postgres/: ChatDao.cpp  ChatDao.hpp  TokenDao.cpp  TokenDao.hpp  UserDao.cpp  UserDao.hpp
src/service/dao/interfaces/: IChatDao.hpp  ITokenDao.hpp  IUserDao.hpp  ProxyDao.cpp  ProxyDao.hpp
src/service/db/: DOs.hpp  Database.hpp
src/service/interceptors/: LoggerInterceptor.hpp
src/service/logging/: FileLogger.cpp  FileLogger.hpp  ILogger.hpp  Logger.cpp  Logging.cpp  Logging.hpp  StreamLogger.cpp  StreamLogger.hpp
src/utils/: Timer.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
